[gd_scene load_steps=2 format=2]

[ext_resource path="res://enemies/AI/LedgeDetector.gd" type="Script" id=1]

[node name="LedgeDetector" type="Node2D"]
script = ExtResource( 1 )

[node name="FloorDetector" type="RayCast2D" parent="."]
position = Vector2( 0.1, 0 )
enabled = true
cast_to = Vector2( 0, 16 )
collide_with_areas = true

[node name="WallDetector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 2, 0 )
